--- a/src/main/resources/presentacio/clients.fxml
+++ b/src/main/resources/presentacio/clients.fxml
@@ -63,11 +63,11 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
          <columns>
-            <TableColumn id="orderNumber" fx:id="columnOrderNumber" editable="false" minWidth="200.0" prefWidth="200.0" text="Email" />
-            <TableColumn id="requiredDate" fx:id="columnRequiredDate" editable="false" minWidth="120.0" prefWidth="120.0" text="Nom" />
-            <TableColumn id="shippedDate" fx:id="columnShippedDate" editable="false" minWidth="100.0" prefWidth="100.0" text="Data Naixement" />
-            <TableColumn id="customerEmail" fx:id="columnCustomerEmail" editable="false" minWidth="90.0" prefWidth="90.0" text="Phone" />
-            <TableColumn id="orderAmount" fx:id="columnCustomerEmail1" editable="false" minWidth="75.0" prefWidth="75.0" text="Crèdit" />
+            <TableColumn id="columnCustomerEmail" fx:id="columnOrderNumber" editable="false" minWidth="200.0" prefWidth="200.0" text="Email" />
+            <TableColumn id="columnCustomerName" fx:id="columnRequiredDate" editable="false" minWidth="120.0" prefWidth="120.0" text="Nom" />
+            <TableColumn id="columnBirthDate" fx:id="columnShippedDate" editable="false" minWidth="100.0" prefWidth="100.0" text="Data Naixement" />
+            <TableColumn id="columnPhone" fx:id="columnCustomerEmail" editable="false" minWidth="90.0" prefWidth="90.0" text="Phone" />
+            <TableColumn id="columnCreditLimit" fx:id="columnCustomerEmail1" editable="false" minWidth="75.0" prefWidth="75.0" text="Crèdit" />
             <TableColumn id="actions" fx:id="columnActions" editable="false" maxWidth="250.0" minWidth="120.0" prefWidth="120.0" text="Accions" />
          </columns>
          <VBox.margin>
