--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -23,9 +23,9 @@
 .btn_back:hover {-fx-background-image:url("../imatges/icon-arrow-light.png");}
 
 /** BOTONS **/
-Button, Button:hover, .btn_back:hover {-fx-padding:0 10px; -fx-cursor:hand;}
-Button {-fx-background-color:#eee; -fx-border-color:#aaa; -fx-border-width:1px; -fx-text-fill:#000; -fx-font-size:16px;}
-Button:hover, .btn_back:hover {-fx-background-color: #666; -fx-text-fill:#fff; -fx-border-width:0;}
+Button, Button:hover, .btn_back:hover {-fx-padding:2 10px; -fx-cursor:hand;}
+Button {-fx-background-color:#eee; -fx-border-color:#aaa; -fx-border-width:1px; -fx-border-radius: 2px; -fx-text-fill:#000; -fx-font-size:16px;}
+Button:hover, .btn_back:hover {-fx-background-color: #666; -fx-border-color:#aaa; -fx-text-fill:#fff; -fx-border-width:0;}
 
 /** NAVEGACIÓ **/
 #nav Button {-fx-font-size:20px; -fx-padding:10 20px; -fx-font-weight: bold; -fx-background-color:#aaa; -fx-border-width:0;}
@@ -34,5 +34,8 @@ Button:hover, .btn_back:hover {-fx-background-color: #666; -fx-text-fill:#fff; -
 /** TEXTES **/
 #title, #subtotal-txt, #moneda-txt, #total {-fx-font-size: 30px; -fx-font-weight: bold;}
 
+
+/* TAULES */
+#ordersTableView .table-column, #customersTableView .table-column {-fx-alignment: center;}
 
 
