--- a/src/main/resources/presentacio/clientsForm.fxml
+++ b/src/main/resources/presentacio/clientsForm.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
 
-<VBox spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentacio.ClientsFormController">
+<VBox alignment="TOP_CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentacio.ClientsFormController">
      <children>
       <HBox alignment="CENTER_LEFT">
          <children>
@@ -20,78 +20,95 @@
                   <Insets right="20.0" />
                </HBox.margin>
             </Button>
-            <Label id="title" text="CLIENT #" />
-            <Label id="title" fx:id="orderNumber" text="001" />
+            <Label id="title" text="Client # " />
+            <Label id="title" fx:id="customerId" text="001" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="20.0" top="20.0" />
          </VBox.margin>
       </HBox>
-      <HBox>
-         <VBox.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" />
-         </VBox.margin>
+      <HBox alignment="CENTER_LEFT">
          <children>
-            <Label text="Email" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="20.0" />
-            <TextField fx:id="textFieldEmail" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="473.0" />
-         </children>
-      </HBox>
-      <HBox>
-         <children>
-            <Label text="Card">
+            <Button id="btn_save" fx:id="btnSave" mnemonicParsing="false" onAction="#saveClient" styleClass="btn_primary" text="Desar">
                <HBox.margin>
-                  <Insets />
+                  <Insets right="20.0" />
                </HBox.margin>
-            </Label>
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="25.0" />
-            <TextField fx:id="textFieldCard" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="218.0" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="17.0" />
-            <Label text="CreditLimit" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="15.0" />
-            <TextField fx:id="textFieldCardLimit" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="149.0" />
+            </Button>
+            <Button id="btn_cancel" fx:id="btnCancel" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#cancelClient" styleClass="btn_cancel" text="Descartar" />
          </children>
          <VBox.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" />
+            <Insets left="20.0" right="20.0" />
          </VBox.margin>
       </HBox>
-      <HBox prefHeight="31.0" prefWidth="287.0">
+      <VBox alignment="TOP_CENTER" VBox.vgrow="NEVER">
          <children>
-            <Label text="Nom" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="21.0" />
-            <TextField fx:id="textFieldNom" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="475.0" />
+            <HBox alignment="CENTER" prefHeight="31.0" prefWidth="287.0">
+               <children>
+                  <Label alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="60.0" text="Nom" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
+                  <TextField fx:id="field_customerName" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="480.0" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="30.0" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+               <children>
+                  <Label alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="60.0" text="Email" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
+                  <TextField fx:id="field_customerEmail" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="480.0" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="30.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER">
+               <children>
+                  <Label alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="56.0" text="Dni">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Label>
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
+                  <TextField fx:id="field_idCard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="200.0" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="60.0" />
+                  <Label alignment="CENTER_RIGHT" prefHeight="40.0" text="Aniversari" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
+                  <DatePicker fx:id="field_birthDate" prefWidth="150.0" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="30.0" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER">
+               <children>
+                  <Label alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="58.0" text="Telèfon">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Label>
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
+                  <TextField fx:id="field_phone" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="200.0" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="30.0" />
+                  <Label alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="85.0" text="Crèdit (Màx.)" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
+                  <TextField fx:id="field_creditLimit" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="120.0" />
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
+                  <Label alignment="CENTER_RIGHT" text="€">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Separator opacity="0.0" orientation="VERTICAL" prefWidth="30.0" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" />
+               </VBox.margin>
+            </HBox>
          </children>
-         <VBox.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" />
-         </VBox.margin>
-      </HBox>
-      <HBox>
-         <children>
-            <Label text="Telefon">
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </Label>
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="16.0" />
-            <TextField fx:id="textFieldTelefon" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="207.0" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="17.0" />
-            <Label text="Birth" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="15.0" />
-            <TextField fx:id="textFieldBirth" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="200.0" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" />
-         </VBox.margin>
-      </HBox>
-      <HBox>
-         <children>
-            <Button fx:id="btnDesarClient" mnemonicParsing="false" onAction="#saveClient" styleClass="btn_primary" text="Desar" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="31.0" prefWidth="49.0" />
-            <Button fx:id="btnCancelClient" mnemonicParsing="false" onAction="#cancelClient" styleClass="btn_cancel" text="Cancelar" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" />
-         </VBox.margin>
-      </HBox>
+      </VBox>
    </children>
 </VBox>
