--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -4,13 +4,15 @@
 */
 
 /** ESTILS GENÈRICS **/
-.hideCursor {-fx-cursor:none!important;}
+.root {-fx-focus-color: #666; -fx-faint-focus-color: transparent;}
+.text-field.required {-fx-focus-color: #ff0000; -fx-border-width:1px; -fx-border-radius: 2px; -fx-border-color:#ff0000;}
+.label.required {-fx-text-fill:#ff0000;}
 .btn_primary, .btn_cancel {-fx-text-fill:#fff; -fx-border-width:0; -fx-padding:5 10px;}
 .btn_primary {-fx-background-color: #007bff;}
 .btn_primary:hover {-fx-background-color: #0062cc;}
 .btn_cancel {-fx-background-color: #dc3545;}
 .btn_cancel:hover {-fx-background-color: #b71928;}
-.btn_back, .btn_back:hover  {-fx-background-radius:50%;
+.btn_back, .btn_back:hover  {-fx-background-radius: 50%;
                              -fx-background-color: #aaa; 
                              -fx-background-repeat: no-repeat;
                              -fx-background-position: center;
@@ -27,6 +29,18 @@ Button, Button:hover, .btn_back:hover {-fx-padding:2 10px; -fx-cursor:hand;}
 Button {-fx-background-color:#eee; -fx-border-color:#aaa; -fx-border-width:1px; -fx-border-radius: 2px; -fx-text-fill:#000; -fx-font-size:16px;}
 Button:hover, .btn_back:hover {-fx-background-color: #666; -fx-border-color:#aaa; -fx-text-fill:#fff; -fx-border-width:0;}
 
+#container {-fx-spacing:10px}
+#btnDelete, #btnEdit {-fx-border-width:0!important;
+                      -fx-background-repeat: no-repeat;
+                      -fx-background-position: center;
+                      -fx-background-size: 20px;
+                      -fx-pref-width: 25px!important; 
+                      -fx-pref-height: 25px!important;}
+#btnDelete {-fx-background-image:url("../imatges/icon-delete.png"); -fx-background-color: #f95464;}
+#btnEdit {-fx-background-image:url("../imatges/icon-edit.png"); -fx-background-color: #4894e7;}
+#btnDelete:hover, #btnDelete:pressed {-fx-background-color: #b80012;}
+#btnEdit:hover, #btnEdit:pressed {-fx-background-color: #004ea3;}
+
 /** NAVEGACIÓ **/
 #nav Button {-fx-font-size:20px; -fx-padding:10 20px; -fx-font-weight: bold; -fx-background-color:#aaa; -fx-border-width:0;}
 #nav Button:hover, .active {-fx-background-color: #666!important; -fx-text-fill:#fff!important; -fx-border-width:0;}
@@ -34,8 +48,12 @@ Button:hover, .btn_back:hover {-fx-background-color: #666; -fx-border-color:#aaa
 /** TEXTES **/
 #title, #idCustomer, #subtotal-txt, #moneda-txt, #total {-fx-font-size: 30px; -fx-font-weight: bold;}
 
-
 /* TAULES */
+TableView {-fx-fixed-cell-size:40px;}
 #ordersTableView .table-column, #customersTableView .table-column {-fx-alignment: center;}
+
+.table-view:focused > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled:selected {-fx-background-color: #666!important;}
+.table-view > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled:hover {-fx-background-color: #aaa!important;}
+.table-view:row-selection .table-cell {-fx-border-color: transparent white transparent transparent;}
 
 
