--- a/src/main/resources/presentacio/clients.fxml
+++ b/src/main/resources/presentacio/clients.fxml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentacio.ClientsController">
+<VBox spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentacio.ClientsController">
    <children>
       <HBox id="nav" alignment="TOP_CENTER" stylesheets="@../css/styles.css">
          <children>
@@ -65,17 +66,17 @@
             <Insets left="20.0" right="20.0" />
          </padding>
       </HBox>
-      <TableView id="customersTableView" fx:id="customersTableView" VBox.vgrow="ALWAYS">
+      <TableView id="customersTableView" fx:id="customersTableView" editable="true" VBox.vgrow="ALWAYS">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
          <columns>
-            <TableColumn id="columnCustomerEmail" fx:id="columnCustomerEmail" editable="false" minWidth="200.0" prefWidth="200.0" text="Email" />
-            <TableColumn id="columnCustomerName" fx:id="columnCustomerName" editable="false" minWidth="120.0" prefWidth="120.0" text="Nom" />
-            <TableColumn id="columnBirthDate" fx:id="columnIdCard" editable="false" minWidth="100.0" prefWidth="100.0" text="Dni" />
-            <TableColumn id="columnBirthDate" fx:id="columnBirthDate" editable="false" minWidth="120.0" prefWidth="120.0" text="Aniversari" />
-            <TableColumn id="columnPhone" fx:id="columnPhone" editable="false" minWidth="90.0" prefWidth="90.0" text="Telèfon" />
-            <TableColumn id="columnCreditLimit" fx:id="columnCreditLimit" editable="false" minWidth="70.0" prefWidth="70.0" text="Crèdit" />
+            <TableColumn id="columnCustomerEmail" fx:id="columnCustomerEmail" minWidth="200.0" prefWidth="200.0" text="Email" />
+            <TableColumn id="columnBirthDate" fx:id="columnIdCard" minWidth="100.0" prefWidth="100.0" text="Dni" />
+            <TableColumn id="columnCustomerName" fx:id="columnCustomerName" minWidth="120.0" prefWidth="120.0" text="Nom" />
+            <TableColumn id="columnBirthDate" fx:id="columnBirthDate" minWidth="120.0" prefWidth="120.0" text="Aniversari" />
+            <TableColumn id="columnPhone" fx:id="columnPhone" minWidth="90.0" prefWidth="90.0" text="Telèfon" />
+            <TableColumn id="columnCreditLimit" fx:id="columnCreditLimit" minWidth="70.0" prefWidth="70.0" text="Crèdit" />
             <TableColumn id="actions" fx:id="columnActions" editable="false" maxWidth="250.0" minWidth="110.0" prefWidth="110.0" text="Accions" />
          </columns>
          <VBox.margin>
