--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -15,10 +15,6 @@
 
 .non-editable {-fx-font-style: italic; -fx-font-weight: bold; -fx-text-fill: #000!important;}
 
-/*.changed, .table-cell:canviat {-fx-text-fill: #4894e7;}
-.netejar, .table-cell:resetejat {-fx-text-fill: #000000;}
-*/
-
 /** BOTONS **/
 .btn_primary, .btn_cancel {-fx-text-fill:#fff; -fx-border-width:0; -fx-padding:5 10px;}
 .btn_primary {-fx-background-color: #007bff;}
@@ -62,11 +58,10 @@ Button:hover, .btn_back:hover {-fx-background-color: #666; -fx-border-color:#aaa
 
 /* TAULES */
 TableView {-fx-fixed-cell-size:40px;}
-#ordersTableView .table-column, #customersTableView .table-column {-fx-alignment: center; }
+.table-column {-fx-alignment: center; }
 
 .table-view:focused > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled:selected {-fx-background-color: #d3d3d3!important;}
 .table-cell {-fx-text-fill:#000!important;}
 .table-view:row-selection .table-cell {-fx-border-color: transparent white transparent transparent;}
-/*blau clar: #b8d6f5*/
 
 
